fixed container overflow

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -21,7 +21,6 @@ body {
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  overflow-x: hidden;
   overflow-y: auto;
 }
 
