--- a/components/Nav/nav.module.scss
+++ b/components/Nav/nav.module.scss
@@ -56,7 +56,7 @@
           background-color: #f1f1f1;
           min-width: 200px;
           box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-          z-index: 1;
+          z-index: 999;
 
           a {
             display: block;
